[project]
name = "redundant_sentences"
version = "0.0.0"
description = "Removes redundant sentences from a string."
authors = [
    {name = "Guardrails AI", email = "contact@guardrailsai.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "thefuzz",
    "nltk",
    "guardrails-ai>=0.3.2",
    "pydantic>=2.4.2",
    "pytest"
]